View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0025500 | Open CASCADE | OCCT:Visualization | public | 2014-11-19 18:10 | 2015-05-14 15:33 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.8.0 | ||||
Target Version | 6.9.0 | Fixed in Version | 6.9.0 | ||
Summary | 0025500: Visualization, TKOpenGl - global trihedron should not inherit transformation from last object | ||||
Description | Z-buffered trihedron is corrupted when displayed using GLSL program (FFP is not affected) within transformed interactive objects in the scene. | ||||
Steps To Reproduce | pload MODELING VISUALIZATION box b 1 2 3 vinit View1 vclear vaxo vdisplay b vfit vzbufftrihedron vsetlocation b 0.2 0 0 vcaps -ffp 0 vrepaint | ||||
Tags | No tags attached. | ||||
Test case number | bugs vis(004) bug25500 | ||||
|
conn_trih_glsl.png (4,249 bytes) |
|
conn_trih_ok.png (4,528 bytes) |
|
Branch CR25500 has been created by kgv. SHA-1: c2a9b80d1c1d08ad5fb540909b5a57e6ac9fcb0f Detailed log of new commits: Author: kgv Date: Wed Nov 19 19:01:45 2014 +0300 0025500: Visualization, TKOpenGl - global trihedron should not inherit transformation from last object |
|
Patch is ready for review. |
|
Dear bugmaster, patch is ready for testing. |
|
Dear BugMaster, Branch CR25500 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode. SHA-1: c2a9b80d1c1d08ad5fb540909b5a57e6ac9fcb0f Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) products component : Linux: 11 (11 on master) Windows: 1 (1 on master) Regressions/Differences: No regressions/differences Testing cases: http://occt-tests.nnov.opencascade.com/CR25500-master-occt/Debian60-64/bugs/vis/bug25500.html http://occt-tests.nnov.opencascade.com/CR25500-master-occt/Windows-32-VC10/bugs/vis/bug25500.html bugs vis(004) bug25500: OK Testing on Linux: occt component : Total MEMORY difference: 358660848 / 358225008 Total CPU difference: 47541.90000000032 / 48053.77 products component : Total MEMORY difference: 112063112 / 112120392 Total CPU difference: 16169.139999999989 / 16964.039999999968 Testing on Windows: occt component : Total MEMORY difference: 273125608 / 272591728 Total CPU difference: 38119.96875 / 36968.953125 products component : Total MEMORY difference: 72245292 / 71070524 Total CPU difference: 10163.6875 / 11430.265625 There are no differences in images found by testdiff. |
|
Branch CR25500 has been updated by mkv. SHA-1: ff2131ad045ebf61a2f2cdd25c82484b102e9e09 Detailed log of new commits: Author: mkv Date: Fri Nov 21 09:14:24 2014 +0300 Test case for CR25500 |
|
Branch CR25500 has been deleted by inv. SHA-1: ff2131ad045ebf61a2f2cdd25c82484b102e9e09 |
occt: master a86ce5a6 2014-11-21 12:34:16 Committer: bugmaster Details Diff |
0025500: Visualization, TKOpenGl - global trihedron should not inherit transformation from last object Test case for CR25500 |
Affected Issues 0025500 |
|
mod - src/OpenGl/OpenGl_Trihedron.cxx | Diff File | ||
add - tests/bugs/vis/bug25500 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2014-11-19 18:10 | kgv | New Issue | |
2014-11-19 18:10 | kgv | Assigned To | => kgv |
2014-11-19 18:10 | kgv | File Added: conn_trih_glsl.png | |
2014-11-19 18:10 | kgv | File Added: conn_trih_ok.png | |
2014-11-19 18:11 | kgv | Relationship added | child of 0025146 |
2014-11-19 19:01 | git | Note Added: 0034519 | |
2014-11-20 10:22 | kgv | Note Added: 0034528 | |
2014-11-20 10:22 | kgv | Assigned To | kgv => duv |
2014-11-20 10:22 | kgv | Status | new => resolved |
2014-11-20 10:43 |
|
Note Added: 0034531 | |
2014-11-20 10:43 |
|
Assigned To | duv => bugmaster |
2014-11-20 10:43 |
|
Status | resolved => reviewed |
2014-11-20 11:26 |
|
Assigned To | bugmaster => mkv |
2014-11-20 11:35 | kgv | Relationship added | related to 0024381 |
2014-11-21 09:16 |
|
Note Added: 0034568 | |
2014-11-21 09:17 |
|
Test case number | => bugs vis(004) bug25500 |
2014-11-21 09:17 |
|
Assigned To | mkv => bugmaster |
2014-11-21 09:17 |
|
Status | reviewed => tested |
2014-11-21 09:17 | git | Note Added: 0034569 | |
2014-11-25 10:29 | bugmaster | Changeset attached | => occt master a86ce5a6 |
2014-11-25 10:29 | bugmaster | Status | tested => verified |
2014-11-25 10:29 | bugmaster | Resolution | open => fixed |
2014-11-28 13:45 | git | Note Added: 0034824 | |
2015-01-19 16:23 | bugmaster | Target Version | 7.1.0 => 6.9.0 |
2015-05-14 15:29 |
|
Status | verified => closed |
2015-05-14 15:33 |
|
Fixed in Version | => 6.9.0 |