0025500: Visualization, TKOpenGl - global trihedron should not inherit transformation from last object

Test case for CR25500